[package]
name = "sig-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive"] }
md5 = "0.7.0"
serde = { version = "1.0.196", features = ["derive"] }
sha = "1.0.3"
toml = "0.8.10"
